objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>PricebookEntry.Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProposalID__c</fullName>
        <label>Proposal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Discount_Sales</fullName>
        <active>true</active>
        <errorConditionFormula>Discount &lt;= 0.05</errorConditionFormula>
        <errorMessage>Discount &gt; 5%</errorMessage>
    </validationRules>
</CustomObject>